@@ -1,14 +1,14 @@
 Package: kknn
 Title: Weighted k-Nearest Neighbors
-Version: 1.2-0
-Date: 2012-10-5
+Version: 1.2-1
+Date: 2012-30-10
 Author: Klaus Schliep & Klaus Hechenbichler
 Description: Weighted k-Nearest Neighbors Classification, Regression
         and Clustering
 Maintainer: Klaus Schliep <klaus.schliep@gmail.com>
 Depends: R (>= 2.10), igraph (>= 0.6)
-Imports: Matrix
+Imports: Matrix, stats
 License: GPL (>= 2)
-Packaged: 2012-10-05 14:13:13 UTC; klaus
+Packaged: 2012-10-30 11:06:28 UTC; klaus
 Repository: CRAN
-Date/Publication: 2012-10-05 15:03:47
+Date/Publication: 2012-10-30 12:23:58
