@@ -1,6 +1,6 @@
 useDynLib(kknn, .registration=TRUE)
 
-import(Matrix, igraph)
+import(Matrix, igraph, stats)
 
 export(simulation, kknn, train.kknn, contr.dummy, contr.metric, contr.ordinal, specClust)
 
