@@ -32,7 +32,9 @@
 
 double eps = 1.0e-8, big = 1.0e300;
 
-
+// replacement rsort_with_index(dvec, cvec, nn); (schneller)
+// split learn, valid (mit is.na support) and x,x (exakter)
+// igraph replacement graph, decompose.graph (igraph raus)  
 void dm(double *learn, double *valid, int *n, int *m, int *p, double *dm, int *cl, int *k, double *mink, double *weights){
     int i, j, l, t, nn, ii, kk; 
     double tmp, *dvec, maxD;
@@ -50,10 +52,12 @@ void dm(double *learn, double *valid, int *n, int *m, int *p, double *dm, int *c
         i=0;
         ii=0L; 
         maxD = big;
+// this can be a for loop
 	while(i<*n){
 	    tmp=0.0;
             l=0; 
 	    while(l<*p && tmp < (maxD+eps)){
+// is.na support
 	        tmp+=pow(fabs(learn[i+l*n[0]]-valid[j+l*m[0]]),*mink)* weights[l];
                 l++; 
 	    }
@@ -73,6 +77,7 @@ void dm(double *learn, double *valid, int *n, int *m, int *p, double *dm, int *c
         rsort_with_index(dvec, cvec, nn);
         for(t=0;t<*k;t++){
             cl[j+t * *m]=cvec[t];
+//  p = 1.0/(*mink);
             dm[j+t * *m]=pow(dvec[t],(1.0/(*mink)));
         }
     }
