@@ -1,3 +1,11 @@
+            CHANGES IN KKNN VERSION 1.2-1
+
+BUG FIXES
+
+    o solved some namespace problems  
+
+
+
             CHANGES IN KKNN VERSION 1.2-0
 
 NEW FEATURES
